Gave frontend files and folder better structure. Implemented student/lecturer login, reset password and forgot password

--- a/client/student/css/style.css
+++ b/client/student/css/style.css
@@ -1,3 +1,4 @@
+/** Stylesheet for students landing page after loginS */
 *{
     margin: 0;
     padding: 0;
@@ -89,3 +90,4 @@ p{
 a{
     text-decoration: none;
 }
+
